# venueiq

./: .gitignore  README.md  deploy.ps1  firebase.json  firestore.rules  map_dashboard.html
backend/: Dockerfile  README.md  download_models.py  main.py  pyproject.toml
mobile/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
mobile/src/: App.tsx  index.css
mobile/src/lib/: firebase.ts
web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  stitch_home.html  tailwind.config.js  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css
web/src/lib/: firebase.ts
web/src/pages/: Dashboard.test.tsx  Dashboard.tsx  Home.tsx
